Fixed gulp adding rev tags to vendor scripts. Fixed mobile overflow.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -362,10 +362,13 @@ a.icon-link {
 
                 p {
                     text-align: justify;
+                    word-wrap: break-word;
                 }
 
                 code {
                     white-space: pre-wrap;
+                    word-wrap: break-word;
+                    word-wrap: anywhere;
                 }
 
                 p.img-container {
